# world_sync

./: .gitignore  WORKSPACE  bazel-bin  bazel-multiplayer  bazel-out  bazel-testlogs  deps.bzl
pbtypes/: BUILD  protocol.proto  test.proto
rust_client/: BUILD  Cargo.toml
rust_client/cargo/: BUILD.bazel  crates.bzl
rust_client/cargo/remote/: BUILD.autocfg-1.1.0.bazel  BUILD.base64-0.9.3.bazel  BUILD.bitflags-1.3.2.bazel  BUILD.byteorder-1.4.3.bazel  BUILD.bytes-0.4.12.bazel  BUILD.cfg-if-0.1.10.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.cloudabi-0.0.3.bazel  BUILD.crossbeam-deque-0.7.4.bazel  BUILD.crossbeam-epoch-0.8.2.bazel  BUILD.crossbeam-queue-0.2.3.bazel  BUILD.crossbeam-utils-0.7.2.bazel  BUILD.fnv-1.0.7.bazel  BUILD.fuchsia-zircon-0.3.3.bazel  BUILD.fuchsia-zircon-sys-0.3.3.bazel  BUILD.futures-0.1.31.bazel  BUILD.futures-cpupool-0.1.8.bazel  BUILD.grpc-0.6.2.bazel  BUILD.grpc-compiler-0.6.2.bazel  BUILD.hermit-abi-0.2.6.bazel  BUILD.httpbis-0.7.0.bazel  BUILD.iovec-0.1.4.bazel  BUILD.kernel32-sys-0.2.2.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.libc-0.2.139.bazel  BUILD.libc-0.2.140.bazel  BUILD.lock_api-0.3.4.bazel  BUILD.log-0.3.9.bazel  BUILD.log-0.4.17.bazel  BUILD.maybe-uninit-2.0.0.bazel  BUILD.memoffset-0.5.6.bazel  BUILD.mio-0.6.23.bazel  BUILD.mio-uds-0.6.8.bazel  BUILD.miow-0.2.2.bazel  BUILD.net2-0.2.38.bazel  BUILD.num-0.4.0.bazel  BUILD.num-bigint-0.4.3.bazel  BUILD.num-complex-0.4.3.bazel  BUILD.num-derive-0.3.3.bazel  BUILD.num-integer-0.1.45.bazel  (+51 more)
rust_client/src/: main.rs
rust_client/src/connection/: BUILD.bazel  connection.rs  tcp.rs
rust_client/src/msg_client/: BUILD.bazel  client.rs  lib.rs  tcp.rs
rust_client/src/protocol_v1/: BUILD.bazel  protocol.rs
server/: BUILD  go.mod  go.sum  main.go
server/connection_manager/: BUILD.bazel  connection_manager.go  session.go  transport.go
server/http/: BUILD.bazel  room_list.go
server/protocol_v1/: entity_observer.go  state.go
server/scheduler/: BUILD.bazel  client.go  connection.go  scheduler.go
server/tcp/: BUILD.bazel  tcp_connection.go  tcp_manager.go
server/websocket/: BUILD.bazel  session.go
