[package]
name = "rust_client"
version = "0.1.0"

[[bin]]
name = "rust_client"
path = "src/main.rs"

[dependencies]
protoc-bin-vendored = "=2.27.3"
protobuf = "=2.8.2"
grpc = "=0.6.2"
protobuf-codegen = "=2.8.2"
tls-api-stub = "=0.1.22"
tls-api = "=0.1.22"
grpc-compiler= "=0.6.2"
byteorder= "=1.4.3"

[package.metadata.raze]
workspace_path = "//rust_client/cargo"
gen_workspace_prefix = "rust_client"
genmode = "Remote"
default_gen_buildrs = true


[package.metadata.raze.crates.protobuf-codegen.'2.8.2']
extra_aliased_targets = [
  "cargo_bin_protoc_gen_rust"
]

