load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "http",
    srcs = ["room_list.go"],
    importpath = "multiplayer/server/http",
    visibility = ["//visibility:public"],
    deps = [
        "//server/connection_manager",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
