load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "scheduler",
    srcs = [
        "connection.go",
        "scheduler.go",
        "client.go"
    ],
    importpath = "multiplayer/server/scheduler",
    visibility = ["//visibility:public"],
    deps = [
        "//pbtypes",
        "@org_golang_google_protobuf//proto",
    ],
)
